add theme picker and strictTemplate config

--- a/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
+++ b/apps/front/src/app/chat/chat-layout/chat-layout.component.scss
@@ -34,7 +34,7 @@ mat-sidenav-content {
 }
 
 .chat {
-  background-color: papayawhip;
+  //background-color: papayawhip;
   flex: 1 1;
   max-width: 100%;
 }
