--- a/apps/front/src/app/chat/components/chat-header/chat-header.component.scss
+++ b/apps/front/src/app/chat/components/chat-header/chat-header.component.scss
@@ -2,8 +2,12 @@
   display: block;
 }
 
+.spacer {
+  flex: 1 1 auto;
+}
+
 h1 {
-  color: #eee;
+  //color: #eee;
 }
 
 @media (max-height: 599px), (max-width: 599px) {
