--- a/apps/front/src/app/app.component.scss
+++ b/apps/front/src/app/app.component.scss
@@ -6,7 +6,7 @@ chat-and-call-root {
   min-height: 100%;
   width: 100%;
   overflow: hidden;
-  background: radial-gradient(#45606d, #000);
+  //background: radial-gradient(#45606d, #000);
 }
 
 mat-card-title {
