--- a/libs/utils/forms-shared/src/lib/errors/control-error/control-error.component.html
+++ b/libs/utils/forms-shared/src/lib/errors/control-error/control-error.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="_error?.literal; else fallback">
-  {{ _error.literal | transloco: _error.params }}
+<ng-container *ngIf="_error; else fallback">
+  {{ _error!.literal | transloco: _error?.params }}
 </ng-container>
 
 <ng-template #fallback>
