language picker and logout reducer

--- a/apps/front/src/app/chat/components/chat-header/chat-header.component.html
+++ b/apps/front/src/app/chat/components/chat-header/chat-header.component.html
@@ -13,7 +13,7 @@
   </mat-toolbar>
 
   <mat-menu #settings="matMenu">
-    <button mat-menu-item>
+    <button mat-menu-item (click)="changeLang()">
       <mat-icon>language</mat-icon>
       Idioma
     </button>
