Creation of private channels and refactor effects

--- a/apps/front/src/app/chat/chat-layout/chat-layout.component.html
+++ b/apps/front/src/app/chat/chat-layout/chat-layout.component.html
@@ -9,6 +9,7 @@
   >
     <h2>Channels</h2>
     <chat-and-call-channel-selector></chat-and-call-channel-selector>
+    <chat-and-call-channel-creator></chat-and-call-channel-creator>
   </mat-sidenav>
   <mat-sidenav-content *ngIf="focus$ | async as focus">
     <div class="content">
