--- a/apps/front/src/app/chat/components/message/message.component.scss
+++ b/apps/front/src/app/chat/components/message/message.component.scss
@@ -1,10 +1,22 @@
 .message {
   margin: 0.5em;
   max-width: 60%;
-  word-wrap: break-word;
-  text-align: justify;
 }
 
 .message.self {
   margin-left: auto;
+}
+
+.message__header {
+  display: flex;
+  align-items: center;
+}
+
+.spacer {
+  flex: 1 1;
+}
+
+.text {
+  word-break: break-word;
+  text-align: justify;
 }
