--- a/apps/front/src/app/chat/components/chat-header/chat-header.component.scss
+++ b/apps/front/src/app/chat/components/chat-header/chat-header.component.scss
@@ -10,8 +10,8 @@ h1 {
   //color: #eee;
 }
 
-@media (max-height: 599px), (max-width: 599px) {
+/* @media (max-height: 599px), (max-width: 599px) {
   :host {
     display: none;
   }
-}
+} */
