--- a/apps/front/src/app/chat/components/message-bar/message-bar.component.scss
+++ b/apps/front/src/app/chat/components/message-bar/message-bar.component.scss
@@ -4,5 +4,11 @@
 
 form {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+}
+
+.input_text {
+  flex: 1 1;
 }
