--- a/apps/front/src/app/chat/components/message/message.component.html
+++ b/apps/front/src/app/chat/components/message/message.component.html
@@ -8,6 +8,7 @@
       <div class="spacer"></div>
       <mat-icon>{{ message.status | messageStatusIcon }}</mat-icon>
     </div>
+    <mat-divider></mat-divider>
     <p class="text">{{ message.text }}</p>
   </mat-card>
 </ng-container>
