i18n flags. File optimistic update.

--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -1,5 +1,8 @@
 /* Reset CSS*/
 @import '~normalize.css';
+
+/* Flag icons*/
+@import '~flag-icon-css/css/flag-icon.min.css';
 /* Material prebuilt theme */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 /* Custom themes */
