Angular 12 and openid provider service

--- a/apps/front/src/app/chat/components/message/message.component.theme.scss
+++ b/apps/front/src/app/chat/components/message/message.component.theme.scss
@@ -1,9 +1,10 @@
+@use '~@angular/material' as mat;
 @import '~@angular/material/theming';
 
 @mixin self-message-theme($theme) {
   $accent: map-get($theme, accent);
 
   .message.self {
-    background-color: mat-color($accent, 0.2);
+    background-color: mat.get-color-from-palette($accent, 0.2);
   }
 }
