--- a/apps/front/src/themes/candy-theme.scss
+++ b/apps/front/src/themes/candy-theme.scss
@@ -1,4 +1,5 @@
-$candy-primary: mat-palette($mat-indigo);
-$candy-accent: mat-palette($mat-pink, A200, A100, A400);
+@use '~@angular/material' as mat;
+$candy-primary: mat.define-palette(mat.$indigo-palette);
+$candy-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-$candy-theme: mat-light-theme($candy-primary, $candy-accent);
+$candy-theme: mat.define-light-theme($candy-primary, $candy-accent);
