--- a/apps/front/src/themes/dark-theme.scss
+++ b/apps/front/src/themes/dark-theme.scss
@@ -1,8 +1,9 @@
-$dark-theme-primary: mat-palette($mat-teal);
-$dark-theme-accent: mat-palette($mat-purple);  //($mat-grey, 600, 300, 900);
-$dark-theme-warn: mat-palette($mat-red, 700, 400, 900);
+@use '~@angular/material' as mat;
+$dark-theme-primary: mat.define-palette(mat.$teal-palette);
+$dark-theme-accent: mat.define-palette(mat.$purple-palette);  //(mat.$grey-palette, 600, 300, 900);
+$dark-theme-warn: mat.define-palette(mat.$red-palette, 700, 400, 900);
 
-$dark-theme: mat-dark-theme(
+$dark-theme: mat.define-dark-theme(
   $dark-theme-primary,
   $dark-theme-accent,
   $dark-theme-warn
