silent renew example

--- a/apps/login/src/app/app.component.html
+++ b/apps/login/src/app/app.component.html
@@ -5,6 +5,7 @@
 
     <ng-container *ngIf="auth.isAuthenticated">
       <button (click)="logout()">Logout</button>
+      <div style="color: red">{{ token }}</div>
       <div>{{ auth | json }}</div>
     </ng-container>
   </ng-container>
