--- a/apps/front/src/themes/candy-theme.scss
+++ b/apps/front/src/themes/candy-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 $candy-primary: mat.define-palette(mat.$indigo-palette);
 $candy-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
