Message bar. Remove required marker and improve behaviour

--- a/apps/front/src/app/chat/components/message-bar/message-bar.component.html
+++ b/apps/front/src/app/chat/components/message-bar/message-bar.component.html
@@ -6,7 +6,7 @@
       (submit)="sendMessage(focus!.id)"
       autocomplete="off"
     >
-      <mat-form-field class="input_text">
+      <mat-form-field class="input_text" [hideRequiredMarker]="true">
         <mat-label></mat-label>
         <input
           matInput
